# DOUBLETAP

./: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.md  doubletap.py  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
doubletap/: __init__.py  aws.py  utils.py
tests/: test_doubletap.py
