[tool.poetry]
name = "doubletap"
version = "0.2.0"
description = "An asynchronous proxy to proxy HTTP traffic through AWS API Gateway and rotate IP address on each request"
homepage = "https://github.com/Porchetta-Industries/DOUBLETAP"
repository = "https://github.com/Porchetta-Industries/DOUBLETAP"
authors = ["Marcello Salvati <marcello@porchetta.industries>"]

[tool.poetry.dependencies]
python = "^3.8"
mitmproxy = "^5.1.1"
aiobotocore = {extras = ["awscli"], version = "^1.0.7"}
faker = "^4.1.1"
httpx = "^0.13.3"
syncasync = "^20180812"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.14.0"
pytest = "^5.4.3"
pylint = "^2.5.3"
flake8 = "^3.8.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
