[tool.poetry]
name = "doubletap"
version = "0.2.0"
description = "An asynchronous proxy to proxy HTTP traffic through AWS API Gateway and rotate IP address on each request"
homepage = "https://github.com/Porchetta-Industries/DOUBLETAP"
repository = "https://github.com/Porchetta-Industries/DOUBLETAP"
authors = ["Marcello Salvati <marcello@porchetta.industries>"]

[tool.poetry.dependencies]
python = "^3.8"
mitmproxy = "^5.2"
aiobotocore = {extras = ["awscli"], version = "^1.1.2"}
faker = "^4.14.0"
httpx = {extras = ["http2"], version = "^0.16.1"}
syncasync = "^20180812"

[tool.poetry.dev-dependencies]
pytest-asyncio = "*"
pytest = "*"
pylint = "*"
flake8 = "*"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
